--- a/lib/moodle2cc/cc/templates/assignment.html.erb
+++ b/lib/moodle2cc/cc/templates/assignment.html.erb
@@ -1,9 +1,13 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Assignment: <%= title %></title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <% if meta_fields
+       meta_fields.each_pair do |key, val|%>
+  <meta name="<%= key %>" content="<%= val %>" /> <% end %>
+  <% end %>
+  <title>Assignment: <%= title %></title>
 </head>
 <body>
-  <%= body %>
+<%= body %>
 </body>
 </html>
